<resources>
    <string name="app_name" translatable="false">Elspirado</string>

    <string name="channel_name" translatable="false">Elspirado notifications</string>
    <string name="channel_description" translatable="false">This channel send pushes for users</string>

    <string name="Main_activity_title" translatable="false">Elspirado</string>
    <string name="Settings_activity_title">Настройки</string>
    <string name="Add_activity_title">Новая запись</string>
    <string name="Edit_activity_title">Редактировать запись</string>

    <!--Main activity alert dialog-->
    <string name="ad_delete_question">Удалить запись?</string>
    <string name="ad_positive_delete">Удалить</string>
    <!--Main activity alert dialog-->

    <string name="ad_save_question">Сохранить запись?</string>
    <string name="ad_positive_save">Сохранить</string>

    <string name="error_string">Поле не должно быть пустым</string>
    <string name="value_is_empty_error">Введите значение силы выдоха</string>
    <string name="no_record_in_chosen_range">На выбранном диапазоне нету значений</string>

    <string name="Expiratory_power">Сила выдоха</string>
    <string name="place_for_a_note">Место для вашей заметки</string>
    <string name="tap_to_add_note">Нажмите, чтобы добавить заметку</string>
    <string name="tap_to_edit_note">Нажмите, чтобы изменить заметку</string>
    <string name="delete_btn">Удалить</string>
    <string name="edit_btn">"Редактировать "</string>
    <string name="ad_negative_cancel">Отмена</string>
    <string name="after_medicine">После лекарства</string>
    <string name="without_medicine">Без лекарства</string>
    <string name="next_registration">Далее</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="registration">Создайте учетную запись</string>
    <string name="enter_registration">Войти</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="to_enter_account">Войти в учетную запись</string>
    <string name="to_sign_up">Зарегистрироваться</string>
    <string name="to_exit_an_account">Выйти из аккаунта</string>
    <string name="to_skip">Продолжить без учетной записи</string>
    <string name="undo">Отмена</string>
    <string name="record_is_deleted">Запись удалена</string>

    <string name="you_will_lose_synchronizaton">Зайдя без учетной записи, вы потеряете возможность облачной синхронизации. Вы уверены?</string>
    <string name="exit_account_all_data_will_be_deleted">При выходе без аккаунта все ваши данные будут удалены. Вы уверены?</string>
    <string name="exit">Выход</string>
    <string name="to_exit">Выйти</string>
    <string name="to_continue">Продолжить</string>
    <string name="you_are_not_signed_up">Вы не зарегистрированы</string>
    <string name="do_you_want_to_exit_an_account">Выйти из аккаунта?</string>

    <string-array name="setting_languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string name="ad_delete_title">Удаление</string>
    <string name="wait">Подождите</string>
    <string name="signin_up_you_in_system">Регистрируем вас в системе…</string>
    <string name="downloading_your_data">Загружаем ваши данные…</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="no_internet_connection">Отсутствует интернет-соединение</string>
    <string name="transfering_your_data_to_protected_server">Переносим ваши данные на защищенный сервер…</string>

    <string name="excel_file_name">Отчет.xls</string>
    <string name="peak_flow_measurement_report">Отчет по пикфлоуметрии</string>
    <string name="report_is_made_with_Elspirado">Отчет сделан с помощью приложения Elspirado</string>
    <string name="share_report">Поделиться отчетом</string>

    <string name="enter_with_google">Войти с помощью Google</string>
    <string name="select_time_range">Выберите диапазон дат</string>
    <string name="we_transfer_your_data">Все ваши данные будут сохранены и перенесены на безопасный сервер.</string>
    <string name="perfectly">Отлично!</string>
    <string name="good_news">Хорошие новости!</string>
    <string name="change_password">Сменить пароль</string>
    <string name="ad_changing_password">Смена пароля</string>
    <string name="ad_we_send_you_email">Для подтверждения смены пароля мы отправим вам письмо на почту</string>
    <string name="ad_good">Хорошо</string>
    <string name="ad_alert">Внимание!</string>
    <string name="delete_all_password">Подтверждаю</string>
    <string name="delete_all">Удалить всё</string>

    <string name="titleNotifications">Уведомления</string>

</resources>
